# ai-badge

./: .gitignore  README.md  STATUS-Phase1A.md  docker-compose.yml
General/: CLAUDE.md  开工令-AI工牌-Phase1A.md
General/.claude/: skills
General/ai-badge/: README.md  STATUS-Phase1A.md
WorkspaceConfig/: CLAUDE.md
backend/: Dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_workflow_events_nullable_job_id.py  003_sessions_device_id_not_null.py
backend/app/: dependencies.py  main.py
backend/app/agents/: capture.py  deletion.py  distiller.py  integration.py
backend/app/api/v1/: health.py
backend/app/artifacts/: models.py  service.py
backend/app/audit/: router.py  service.py
backend/app/auth/: router.py  schemas.py  service.py
backend/app/capture/: service.py
backend/app/models/: artifact.py  audit_log.py  deletion_job.py  device.py  job.py  organization.py  workflow_event.py
backend/app/orchestrator/: models.py  worker.py
backend/app/providers/: base.py  mock_whisper.py  openai_llm.py  openai_whisper.py
backend/app/sessions/: router.py  schemas.py
backend/app/storage/: local.py
backend/app/trust/: redlines.py  sensitive_check.py
backend/tests/: mock_providers.py  test_t6_t7_integration.py  test_t6_unit.py
backend/tests/integration/: test_e2e_vertical_slice.py
backend/tests/unit/: test_agents.py  test_artifacts.py  test_orchestrator.py  test_retract.py  test_trust.py
personal/: AGENTS.md  CLAUDE.md  快速开始.html  快速开始.md
personal/.claude/: skills
(+48 files in other folders)
